# passivbot

./: .commit_utils.sh  .coveragerc  .dockerignore  .git_commit_message_utils.txt  .git_commit_passivbot_changes.sh  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yaml  .readthedocs.yml  .terraform.lock.hcl  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile_live  LICENSE  Procfile  README.md  Refactor.md  add_bot.sh  analyze.py  api-keys-example.json  api-keys.example.json  api-keys.json  api-keys.json.example  api-keys_1.json  app.json  auto_profit_transfer.py  backtest.py  backtest_multi.py  backtest_notes.ipynb  backtesting_notes.ipynb  balance_overview-Copy1.ipynb  balance_overview.ipynb  batch_optimize.py  binance.py  binance_notes.ipynb  binance_spot.py  (+138 more)
.assistant/: commit_instructions.txt  commit_unstaged.sh
backtest_configs/: storj.hjson  xmr-test.hjson  xmr.hjson  xrp.hjson
bots/: __init__.py  backtest_bot.py  base_bot.py  base_live_bot.py  binance.py  configs.py
caches/: first_ohlcv_timestamps_binanceusdm.json  first_ohlcv_timestamps_unified.json  first_ohlcv_timestamps_unified_exchange_specific.json
configs/: approved_coins.json  approved_coins_pumpdump.json  approved_coins_top15mcap.json  approved_coins_top20mcap.json  approved_coins_top23mcap.json  custom_endpoints.json.example  ema_anchor_opt_balanced_2026-07-24.json  ema_anchor_smoke_test.json  fake_live_hsl_btc.hjson  hsl.json  pf1_opt_round2.json  refactor_test.json  refactor_test_v8.json  refactor_test_v8_opt_profile.json  refactor_test_v8_opt_smoke.json  simple_ema_mm_minimal.json  template.json  test.hjson
container/: entrypoint.sh  render_api_keys.py  render_config.py  tee_exec.py
definitions/: candle.py  fill.py  order.py  order_list.py  position.py  position_list.py  statistic.py  tick.py
docs/: CONTRIBUTING.md  analysis.md  auto_profit_transfer.md  auto_unstuck.md  backtesting.md  candlestick_manager_iteration3_plan.md  coin_overrides.md  config.bot.md  config_workflow.md  configuration.md  container_deployment.md  data_strategy_verification_tests.md  developers.md  equity_hard_stop_loss.md  equity_hard_stop_loss_cooldown_contracts.md  equity_hard_stop_loss_reference.md  equity_hard_stop_loss_risks.md  fake_live.md  faq.md  fill_events_manager_analysis.md  fill_events_manager_spec.md  fill_events_session_summary.md  forager.md  git_merge_conflict_resolution.md  glossary.md  handtuning.md  hedge_iteration_log.md  hedging.md  how-it-works.md  hyperliquid_guide.md  index.md  installation.md  lighter_guide.md  live.md  manager.md  metrics.md  min_effective_cost.md  mirror.md  monitor.md  optimize.md  (+30 more)
exchanges/: binance.py  binance_spot.py  bingx.py  bitget.py  bybit.py  bybit_spot.py  bybit_v5.py  kucoin.py  mexc.py  okx.py
exchanges_multi/: binance.py  binance_spot.py  bingx.py  bitget.py  bybit.py  bybit_spot.py  gateio.py  hyperliquid.py  kucoin.py  okx.py
helpers/: analyzers.py  converters.py  downloader.py  loaders.py  misc.py  optimized.py  plotter.py  print_functions.py
infrastructure/: Dockerfile  docker-compose.yml
live_configs/: binance_default.json  binance_default_2021-03.json  binance_default_2021-04.json  binance_xmr_stoppy_adg2.37%.json  binance_xmr_with_ema_2021-04-16.json  bybit_btcusdu21_default.json  bybit_default.json
manager/: __init__.py  __main__.py  cli.py  config.example.yaml  config.settings.yaml  config.yaml  config_parser.py  constants.py  create-job.sh  instance.py  manager.py  pm.py
notebooks/: balance_overview.ipynb  brainstorm_flip_trailing.ipynb  hand_tuner-Copy1.ipynb  hand_tuner.ipynb  notebook_setup.py  notes_backtest.ipynb  notes_backtest_forager.ipynb  notes_backtest_forager_mod.ipynb  start.bat
notebooks copy/: notes_backtest.ipynb
optimize_results/: 2025-03-27T09_30_20_bybit_24days_BTC_ETH_08540327_all_results.txt  2025-03-27T09_31_11_bybit_24days_BTC_ETH_8def8af8_all_results.txt  2025-03-27T09_32_55_bybit_24days_BTC_ETH_7478e4c9_all_results.txt  2025-03-27T09_37_23_bybit_24days_BTC_ETH_28c5f427_all_results.txt
passivbot-rust/: Cargo.toml  build.rs  cargotest.sh
passivbot-rust/src/: analysis.rs  backtest.rs  candles.rs  closes.rs  coin_selection.rs  constants.rs  dynamic.rs  entries.rs  equity_hard_stop_loss.rs  grids.rs  hedge.rs  lib.rs  mirror.rs  orchestrator.rs  python.rs  risk.rs  simple_ema_mm.rs  trailing.rs  trailing_flip.rs  types.rs  utils.rs
passivbot-rust/src/strategies/: ema_anchor.rs  mod.rs  registry.rs  spec.rs  trailing_grid.rs  trailing_grid_v7.rs  trailing_martingale.rs
pytests/: test_gate_entries_by_twel_complex.py  test_unstucking_cases.py
railway/: approved_coins.json  entrypoint.sh  template.json
requirements/: backtesting.txt  base.txt  dev.txt  docs.txt  tests.txt
risk_management/: .gitignore  README.md  __init__.py  _parsing.py  _utils.py  account_clients.py  analytics.py  configuration.py  dashboard.py  dashboard_config.json  history.py  letsencrypt.py  performance.py  realized_pnl.py  realtime.py  realtime_config.example.json  realtime_config.json  reporting.py  snapshot_utils.py  telegram_notifications.py  web.py  web_server.py
scripts/: 0_coin_grid_validator.py  1_backtest_looper.py  2_backtest_summary.py  3_server_script_generator.py  backtest_looper.py  backtest_summary.py  celli_script.py  full_run.sh  full_run_pro.sh  full_run_sawyer.sh  full_run_tedy.sh  summarize.sh  verify_bitget_ohlcv.py
src/: analysis_visibility.py  auto_profit_transfer.py  backtest.py  backtest_artifacts.py  backtest_cancellation.py  backtest_dataset.py  backtest_dataset_materializer.py  backtest_forager.py  backtest_multi.py  backtest_suite.py  backtest_universe.py  binance_ohlcv_archive.py  bitget_normalization.py  bounds_utils.py  candlestick_manager.py  (+85 more)
standalone_risk_management/: README.md  custom_endpoint_overrides.py  pyproject.toml
standalone_risk_management/risk_management/: _notifications.py  account_clients.py  ccxt_helpers.py  configuration.py  dashboard_config.json  email_notifications.py  realtime_config.example.json  realtime_config.json  web_server.py
(+6551 files in other folders)
