[metadata]
name = passivbot
description = Trading bot running on Bybit and Binance Futures
long_description = file: README.md
long_description_content_type = text/markdown
author = enarjord
# author_email =
url = https://www.passivbot.com
project_urls =
    Source=https://github.com/enarjord/passivbot
    Tracker=https://github.com/enarjord/passivbot/issues
#license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
#    Programming Language :: Python :: 3
#    Programming Language :: Python :: 3 :: Only
#    Programming Language :: Python :: 3.6
#    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Intended Audience :: Developers
#    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8, <3.9
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
  passivbot = passivbot.cli:main

[requirements-files]
install_requires = requirements/base.txt
extras_require =
  dev = requirements/dev.txt
  docs = requirements/docs.txt
  tests = requirements/tests.txt
  backtesting = requirements/backtesting.txt

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[sdist]
owner = root
group = root

[flake8]
max-line-length = 120
exclude =
  # No need to traverse our git directory
  .git,
  # Nox virtualenvs are also not important
  .nox,
  # There's no value in checking cache directories
  __pycache__,
  # Don't check the auto generated version file
  src/passivbot/version.py,
  # Package build stuff
  build,
  dist,
  # The conf file is mostly autogenerated, ignore it
  docs/conf.py,
  # Also ignore setup.py, it's mostly a shim
  setup.py,
  # Ignore our custom pre-commit hooks
  .pre-commit-hooks

per-file-ignores =
  # F401 imported but unused
  __init__.py: F401
  # D100 Missing docstring in public module
  # D103 Missing docstring in public function
  tests/*.py: D100,D103

ignore =
  # Black settings
  E203, E266, E501, W503
  # D104 Missing docstring in public package
  D104,
  # D107 Missing docstring in __init__ - Class docstrings will cover __init__ docstrings
  D107,
  # D212 Multi-line docstring summary should start at the first line
  D212,
  # D200 One-line docstring should fit on one line with quotes
  D200,
  ### Too many missing docstrings - Disable for now
  # D100 Missing docstring in public module
  # D101 Missing docstring in public class
  # D102 Missing docstring in public method
  # D103 Missing docstring in public function
  # D205 1 blank line required between summary line and description
  # D415 First line should end with a period, question mark, or exclamation point
  # D403 First word of the first line should be properly capitalized
  D100, D101, D102, D103, D205, D415, D403

# flake8-docstrings config
docstring-convention = google


[mypy]
python_version = 3.7
mypy_path = src
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True

# for strict mypy: (this is the tricky one :-))
#disallow_untyped_defs = True

plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True
