[package]
name = "passivbot_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "passivbot_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
ndarray = "0.15.6"
numpy = "0.21.0"
memmap = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
