[package]
name = "passivbot_rust"
version = "0.1.0"
edition = "2021"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[lib]
name = "passivbot_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2" }
ndarray = "0.15.6"
numpy = "0.21.0"
memmap = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_enum = "0.7"
strum = "0.26"
strum_macros = "0.26"
log = "0.4"
