[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standalone-risk"
version = "0.1.0"
description = "Realtime risk management dashboards for ccxt-supported exchanges."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Passivbot Contributors"},
]
dependencies = [
  "ccxt>=4.0.0",
  "passlib[bcrypt]>=1.7",
]

[project.optional-dependencies]
dashboards = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "python-multipart>=0.0.6",
  "uvicorn[standard]>=0.23",
]
telegram = [
  "httpx>=0.25",
]
tls = [
  "certbot>=2.4",
]
all = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "python-multipart>=0.0.6",
  "uvicorn[standard]>=0.23",
  "httpx>=0.25",
  "certbot>=2.4",
]

[tool.setuptools]
packages = ["risk_management"]
include-package-data = true
py-modules = ["custom_endpoint_overrides"]

[tool.setuptools.package-data]
"risk_management" = ["templates/**/*", "dashboard_config.json", "realtime_config.json", "realtime_config.example.json"]
